argocd/09-allow-argocd-server-kubernetes-api-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-argocd-server-kubernetes-api-egress
  namespace: argocd
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: argocd-server
  policyTypes:
  - Egress
  egress:
  - ports:
    - protocol: TCP
      port: 443
  - ports:
    - protocol: TCP
      port: 6443
