argocd/14-allow-argocd-application-controller-kubernetes-api-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-argocd-application-controller-kubernetes-api-egress
  namespace: argocd
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: argocd-application-controller
  policyTypes:
  - Egress
  egress:
  - to:
    - ipBlock:
        cidr: 10.96.0.1/32
    ports:
    - protocol: TCP
      port: 443
  - to:
    - ipBlock:
        cidr: 192.168.70.20/32
    ports:
    - protocol: TCP
      port: 6443
