argocd/15-argocd-repo-server-github-egress-cnp.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: argocd-repo-server-github-egress
  namespace: argocd
spec:
  endpointSelector:
    matchLabels:
      k8s:io.kubernetes.pod.namespace: argocd
      k8s:app.kubernetes.io/name: argocd-repo-server
  egress:
  - toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: kube-system
        k8s:k8s-app: kube-dns
    toPorts:
    - ports:
      - port: "53"
        protocol: UDP
      - port: "53"
        protocol: TCP
      rules:
        dns:
        - matchPattern: "*"
  - toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: argocd
        k8s:app.kubernetes.io/name: argocd-redis
    toPorts:
    - ports:
      - port: "6379"
        protocol: TCP
  - toFQDNs:
    - matchName: github.com
    - matchPattern: "*.github.com"
    - matchName: raw.githubusercontent.com
    - matchPattern: "*.githubusercontent.com"
    toPorts:
    - ports:
      - port: "443"
        protocol: TCP
